--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
                 <label for="psw"><b>Password</b></label>
                 <input type="password" id="pwd" placeholder="Password">
                     
-                <a href=""><button  onclick= "validate()" type="button">Login</button></a>
+                <a href="dashboard.html"><button  type="button">Login</button></a>
                 <a href="register.html"> <button type="button" style="background-color: #dc3545">Register</button></a>
                 <label>
                   <input type="checkbox" checked="checked" name="remember"> Remember me
